--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,8 +16,15 @@
     "moduleResolution": "bundler",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "ES2022"
+    "module": "ES2022",
+    "paths": {
+      "@models/*": ["./src/app/core/models/*"],
+      "@admin/*": ["./src/app/admin/*"],
+      "@mentor/*": ["./src/app/mentor/*"],
+      "@students/*": ["./src/app/students/*"]
+    }
   },
+
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
